# fps_platform

./: .clang-format  .gitignore  CMakeLists.txt  README.dir  README.md
cpp/lib/: CMakeLists.txt  todo.list
cpp/lib/fps_build_info/: CMakeLists.txt  fps_build_info.cpp
cpp/lib/fps_build_info/test/: CMakeLists.txt  fps_build_info.unit_test.cpp
cpp/lib/fps_container/: CMakeLists.txt  algorithms.h  byte_queue.cpp  byte_queue.h  comparators.h  extractors.h  flat_set.h  fps_container.cpp  fps_container.h  options.h  set.h
cpp/lib/fps_container/detail/: flat_integral_multiset.h  flat_integral_set.h  flat_object_set.h  flat_set_common.h  make_flat_set.h  make_sorted_vector.h  sorted_integral_vector.h  sorted_object_vector.h  sorted_vector.h  sorted_vector_common.h
cpp/lib/fps_container/test/: CMakeLists.txt  fps_container.unit_test.cpp
cpp/lib/fps_except/: CMakeLists.txt  exception.cpp  exception.h  fps_except.cpp  fps_except.h  logic_error.cpp  logic_error.h  runtime_error.cpp  runtime_error.h
cpp/lib/fps_except/test/: CMakeLists.txt  (+1 more)
cpp/lib/fps_fs/: .file.cpp.swp  .file.h.swp  CMakeLists.txt  file.cpp  file.h  fps_fs.h  glob.cpp  glob.h  path.cpp  path.h
cpp/lib/fps_ipc/: CMakeLists.txt  constants.h  fps_ipc.cpp  fps_ipc.h  ipc_util.h  mapped_memory.cpp  mapped_memory.h  sequenced_spinlock.h  shared_memory.cpp  shared_memory.h  shm_fifo.h  shm_region.cpp  shm_region.h  shm_segment.cpp  shm_segment.h  spinlock.h  swmr_fifo.h  swmr_queue.h  swmr_queue_reader.h  swmr_queue_writer.h  swmr_ring_buffer.h  swmr_sequence_lock.h  swmr_shm_queue.h  swmr_shm_queue_reader.h  swmr_shm_queue_writer.h  swmr_spinlock.h  swsr_ring_buffer.h  thread_fifo.h
cpp/lib/fps_json/: CMakeLists.txt  document.cpp  document.h  fps_json.h  value.cpp  value.h
cpp/lib/fps_math/: CMakeLists.txt  logarithm.h
cpp/lib/fps_net/: CMakeLists.txt  address.cpp  address.h  tcp_socket.h  udp_socket.h
cpp/lib/fps_ntp/: CMakeLists.txt  fps_ntp.cpp  fps_ntp.h
cpp/lib/fps_parameter/: CMakeLists.txt  fps_parameter.cpp  fps_parameter.h
cpp/lib/fps_string/: CMakeLists.txt  convert.h  format.cpp  format.h  fps_string.cpp  fps_string.h
cpp/lib/fps_system/: CMakeLists.txt  cpu_affinity_mask.cpp  cpu_affinity_mask.h  fps_system.cpp  fps_system.h
cpp/lib/fps_time/: CMakeLists.txt  clock.h  constants.h  convert.h  datetime.cpp  datetime.h  fps_time.h  timer.h  timestamp.cpp  timestamp.h  tz_manager.cpp  tz_manager.h
cpp/lib/fps_util/: CMakeLists.txt  algorithms.h  bswap.h  build_info.cpp  build_info.h  byte_queue.cpp  byte_queue.h  comparators.h  extractors.h  fps_util.cpp  fps_util.h  intrinsics.h  macros.h  send_email.cpp  send_email.h  set.h  signal.h  singleton.h  sorted_vector.h
cpp/test/: CMakeLists.txt  basic_compilation.test.cpp  boost_compilation.test.cpp
cpp/test/atlassian/: CMakeLists.txt  atl.heap_median.cpp  atl.palindromes.cpp  atl.stack.cpp
cpp/test/cubist.fib/: CMakeLists.txt  README.txt  cubist.fib  cubist.fib.cpp
(+127 files in other folders)
