#
# Note : Libraries must be ordered by dependency.  
#
add_subdirectory( fps_math )
add_subdirectory( fps_string )
add_subdirectory( fps_except )
add_subdirectory( fps_time ) 
add_subdirectory( fps_util )
add_subdirectory( fps_fs ) 
add_subdirectory( fps_json )
add_subdirectory( fps_system ) 
add_subdirectory( fps_ipc ) 
add_subdirectory( fps_net ) 
add_subdirectory( fps_build_info )
